welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: not found: value getMondehauteur
      setPos(getMondeLargeur()-6+a,getMondehauteur()-b)
                                   ^